--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="heading">To-Do List</div>
     <div class="container">
       <div class="todocontainer">
         <input type="text" class="input" id="input" placeholder="ToDo"/></br>
