Added Alarm functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="todocontainer">
         <input type="text" class="input" id="input" placeholder="ToDo"/></br>
         <input type="text" class="input" id="desc" placeholder="Add desc" /></br>
+        <input type="datetime-local" class="input" id="date" placeholder="Choose Date and Time" />
         <button type="submit" class="submit" id="submit">ADD</button>
         <button class="delete" id="delete">CLEAR</button>
       </div>
