--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="heading">To-Do List</div>
-    <div class="container">
+    <div class="container" id="container">
       <div class="todocontainer">
         <input type="text" class="input" id="input" placeholder="ToDo"/></br>
         <input type="text" class="input" id="desc" placeholder="Add desc" /></br>
